added new assignments

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,8 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
 <!DOCTYPE html>
 <html>
 <head>
@@ -69,6 +65,16 @@ input[type=submit]:hover {
 </head>
 
 <body>
+
+    <address>
+        4229 67th Street<br />
+        Urbandale,Iowa<br />
+        <abbr title="Phone">Phone</abbr>
+        515.421.2116
+    </address>
+
+  
+
 <div class="container">
     <div style="text-align:center">
         <h2>Contact Me</h2>
@@ -96,7 +102,17 @@ input[type=submit]:hover {
             </form>
         </div>
     </div>
+
 </div>
+
+<footer>
+
+        <address>
+            <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
+            <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+        </address>
+</footer>
+
 </body>
 
 </html>
