--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -107,6 +107,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact"><b>Contact</b></a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="displayCountries"><b>displayCountries</b></a>
+                        </li>
+
+
                        
                     
                         <li class="nav-item">
@@ -118,7 +123,10 @@
                                     </a>
                          
                                     <a asp-area="" asp-controller="Student" asp-action="Student"><b>Assignment 6.1</b></a>
-                            </div>
+                                    
+                                    <a asp-area="" asp-controller="Home" asp-action="displayCountries"><b> Topic 3: Adding Data transfer to a Web Site</b></a>
+
+                                </div>
                         </div>
                         </li>
                         <li class="nav-item">
