--- a/Views/Home/displayCountries.cshtml
+++ b/Views/Home/displayCountries.cshtml
@@ -122,7 +122,7 @@ function myFunction(e) {
 <div class="row"> 
  <div class="column">
    <div class="popup">
-  <img src="https://cdn.britannica.com/68/7068-004-7848FEB4/Flag-Canada.jpg" onmouseover="myFunction(event)"  onmouseout="normalImg(this)"  alt="Canada" style="width:100%">
+  <img src="https://cdn.britannica.com/68/7068-004-7848FEB4/Flag-Canada.jpg"   alt="Canada" style="width:100%">
   <span class="popuptext" id="myPopup"> Name : Canada  <br />Game : Winter Olympics <br />Sport/Type : Curling/Indoor</span>
    </div>
  </div>
@@ -132,7 +132,7 @@ function myFunction(e) {
   
  <div class="column">
    <div class="popup">
-  <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Flag_of_Sweden.svg/1200px-Flag_of_Sweden.svg.png" onclick="myFunction(event)" alt="Sweden" style="width:100%">
+  <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Flag_of_Sweden.svg/1200px-Flag_of_Sweden.svg.png"  alt="Sweden" style="width:100%">
   <span class="popuptext" id="myPopup">Name : Sweden  <br />Game : Winter Olympics <br />Sport/Type : Curling/Indoor</span>
    </div>
  </div>
@@ -140,7 +140,7 @@ function myFunction(e) {
   
 <div class="column">
    <div class="popup">
-  <img src="https://cdn.britannica.com/68/7068-004-7848FEB4/Flag-Canada.jpg" onclick="myFunction(event)" alt="Canada" style="width:100%">
+  <img src="http://4.bp.blogspot.com/-j2gDZLhKbdM/U5NSTzqGSFI/AAAAAAAAANg/weivueZYMLA/s1600/brazilian-flag.jpg" alt="Brazil" style="width:100%">
   <span class="popuptext" id="myPopup">Popup text...</span>
    </div>
  </div>
@@ -148,7 +148,7 @@ function myFunction(e) {
   
  <div class="column">
    <div class="popup">
-  <img src="https://cdn.britannica.com/68/7068-004-7848FEB4/Flag-Canada.jpg" onclick="myFunction(event)" alt="Canada" style="width:100%">
+  <img src="https://i.ebayimg.com/images/g/b~cAAOSw4aBaNnx6/s-l300.jpg" alt="Zimbabwe" style="width:100%">
   <span class="popuptext" id="myPopup">Popup text...</span>
    </div>
  </div>
