added tickets app

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -123,6 +123,9 @@
                                     <a asp-area="" asp-controller="Student" asp-action="Student"><b>Assignment 6.1</b></a>
                                     
                                     <a asp-area="" asp-controller="Home" asp-action="displayCountries"><b> Topic 3: Adding Data transfer to a Web Site</b></a>
+                                    
+                                    <a asp-area="" asp-controller="Home" asp-action="MyTickets"><b>TicketingSystem </b></a>
+
 
                                 </div>
                         </div>
