--- a/Views/Home/displayCountries.cshtml
+++ b/Views/Home/displayCountries.cshtml
@@ -111,7 +111,7 @@ function myFunction(e) {
 
 <!-- Header -->
 <div class="header" id="myHeader">
-  <h1>@ViewBag.Title</h1>
+  <h1>Olympyics</h1>
   <p>Click on the buttons to change the grid view.</p>
   <button class="btn" onclick="one()">1</button>
   <button class="btn active" onclick="two()">2</button>
