--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -1,3 +1,7 @@
-﻿@{
+﻿@using UdayChinhamoraWebsite
+@using UdayChinhamoraWebsite.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@{
     Layout = "_Layout";
 }
