Add Tag Helper & View Components

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -124,7 +124,7 @@
                                     
                                     <a asp-area="" asp-controller="Home" asp-action="displayCountries"><b> Topic 3: Adding Data transfer to a Web Site</b></a>
                                     
-                                    <a asp-area="" asp-controller="Student" asp-action="Index"><b>UdayChinhamoraWebsite </b></a>
+                                    <a asp-area="" asp-controller="Student" asp-action="Index"><b>Tickets System </b></a>
 
 
                                 </div>
