added authorization to tickets App

--- a/Views/Home/tickets.cshtml
+++ b/Views/Home/tickets.cshtml
@@ -1,5 +1,13 @@
 ﻿@model IEnumerable<Ticket>
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+
 <div class="row">
     <div class="col-sm-2">
         <form asp-action="Filter" method="post">
@@ -48,12 +56,14 @@
             <tbody>
                 @foreach (Ticket ticket in Model)
                 {
+                  
+
                     <tr>
                         <td>@ticket.Name</td>
                         <td>@ticket.SprintNum</td>
                         <td>@ticket.PointVal</td>
                         <td>@ticket.Description</td>
-                        <td>@ticket.Status.Name</td>
+                        
                         <td>
                             <form asp-action="Edit" method="post" asp-route-id="@ViewBag.Filters.FilterString" class="mr-2">
                                 <input type="hidden" name="@nameof(Ticket.Id)" value="@ticket.Id">
@@ -72,3 +82,7 @@
         <a asp-action="Add" class="btn-link"><h3>Add New Ticket</h3></a>
     </div>
 </div>
+
+</body>
+
+</html>
