--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -95,47 +95,51 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><b>Home</b></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy"><b>Privacy</b></a>
-                        </li>
+                     
+                           
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About"><b>About</b></a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy"><b>Privacy</b></a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact"><b>Contact</b></a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About"><b>About</b></a>
+                            </li>
 
-                       
-
-
-                       
-                    
-                        <li class="nav-item">
-                        <div class="dropdown">
-                            <button onclick="myFunction()" class="dropbtn">My Assignments</button>
-                            <div id="myDropdown" class="dropdown-content">
-                                    <a href="https://github.com/UdayChinamora/UdayChinamhoraRoutingApp">
-                                        Module5 Topic 5:Website Add Site Menu, Admin and Routing
-                                    </a>
-                         
-                                    <a asp-area="" asp-controller="Student" asp-action="Student"><b>Assignment 6.1</b></a>
-                                    
-                                    <a asp-area="" asp-controller="Home" asp-action="displayCountries"><b> Topic 3: Adding Data transfer to a Web Site</b></a>
-                                    
-                                    <a asp-area="" asp-controller="Student" asp-action="Index"><b>Tickets System </b></a>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact"><b>Contact</b></a>
+                            </li>
 
 
+
+
+
+
+                            <li class="nav-item">
+                                <div class="dropdown">
+                                    <button onclick="myFunction()" class="dropbtn">My Assignments</button>
+                                    <div id="myDropdown" class="dropdown-content">
+
+                                        <a href="https://github.com/UdayChinamora/UdayChinamhoraRoutingApp">
+                                            Module5 Topic 5:Website Add Site Menu, Admin and Routing
+                                        </a>
+
+                                        <a asp-area="" asp-controller="Student" asp-action="Student"><b>Assignment 6.1</b></a>
+
+                                        <a asp-area="" asp-controller="Home" asp-action="displayCountries"><b> Topic 3: Adding Data transfer to a Web Site</b></a>
+
+                                    <a asp-area="" asp-controller="Home" asp-action="tickets"><b> Ticketing System</b></a>
+
+
+                                    </div>
                                 </div>
-                        </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Admin </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Admin </a>
                         </li>
 
                     </ul>
-                    </ul>
+                    
                 </div>
             </div>
         </nav>
